syntax = "proto3";

package system.v1;

option go_package="rpc/system/v1;system_v1";

import "rpc/system/v1/resource.proto";

// protoc --go_out=. --twirp_out=option_prefix=casbin:. rpc/system/v1/role.proto rpc/system/v1/resource.proto
// Role 角色相关接口
service Role {
    // 角色列表
    rpc List(RoleListReq) returns (RoleListResp); // casbin:system-role-list
    // 角色详情
    rpc Get(RoleGetReq) returns (RoleGetResp); // casbin:system-role-get
    // 角色添加
    rpc Add(RoleAddReq) returns (RoleAddResp); // casbin:system-ROLE-add
    // 角色修改
    rpc Patch(RolePatchReq) returns (RolePatchResp); // casbin:system-role-patch
    // 角色删除
    rpc Delete(RoleDeleteReq) returns (RoleDeleteResp); // casbin:system-role-delete
    // 角色权限修改
    rpc PatchPermission(RolePatchPermissionReq) returns (RolePatchPermissionResp); // casbin:system-role_permission-patch
}


// 用户传递给前端的角色信息
message r {
    // 角色id
    int64 id = 1;
    // 角色名
    string name = 2;
    // 创建时间
    int64 created = 3;
    // resources
    repeated res resources = 4;
}


message RoleListReq {}

message RoleListResp {
    // 响应码[机读]
    int32 code = 1;
    // 返回信息，人读
    string message = 2;
    // 角色数据
    repeated r data = 3;
}

message RoleGetReq {
    int64 id = 1;
}

message RoleGetResp {
    // 响应码[机读]
    int32 code = 1;
    // 返回信息，人读
    string message = 2;
    // 角色数据
    r data = 3;
}

message RoleAddReq {
    // 角色数据
    r role = 1;
}

message RoleAddResp {
    // 响应码[机读]
    int32 code = 1;
    // 返回信息，人读
    string message = 2;
    // 角色数据
    int64 data = 3;
}

message RolePatchReq {
    // 角色数据
    r role = 1;
}

message RolePatchResp {
    // 响应码[机读]
    int32 code = 1;
    // 返回信息，人读
    string message = 2;
}

message RoleDeleteReq {
    int64 id = 1;
}

message RoleDeleteResp {
    // 响应码[机读]
    int32 code = 1;
    // 返回信息，人读
    string message = 2;
}

message RolePatchPermissionReq {
    // 角色数据
    r role = 1;
}

message RolePatchPermissionResp {
    // 响应码[机读]
    int32 code = 1;
    // 返回信息，人读
    string message = 2;
}
