syntax = "proto3";

package system.v1;

option go_package="rpc/system/v1;system_v1";

import "rpc/system/v1/role.proto";
import "rpc/system/v1/department.proto";

// protoc --go_out=. --twirp_out=option_prefix=casbin:. rpc/system/v1/user.proto
// User定义用户相关接口
service User {
    // 这里的行尾注释 casbin:resource 用于验证接口权限，格式为module-object-action(主模块-对象-操作)
    //
    // List 获取列表
    rpc List(UserListReq) returns (UserListResp); // casbin:system-user-list
	// Get 获取详情
    rpc Get(UserGetReq) returns (UserGetResp); // casbin:system-user-get
	// Add 添加
    rpc Add(UserAddReq) returns (UserAddResp);  // casbin:system-user-get
    // Delete 删除
    rpc Delete(UserDeleteReq) returns (UserDeleteResp); // casbin:system-user-delete
    // Patch 修改
    rpc Patch(UserPatchReq) returns (UserPatchResp); // casbin:system-user-patch
    rpc ResetPassword(UserResetPasswordReq) returns (UserResetPasswordResp); // casbin:system-user_password-reset

    //  ---登录用户的操作----
    // info 获取当前登录用户的信息
    rpc Info(UserInfoReq) returns (UserInfoResp);
    // password 修改密码
    rpc PatchPassword(UserPatchPasswordReq) returns (UserPatchPasswordResp);
    // logout 登出
    rpc Logout(UserLogoutReq) returns (UserLogoutResp);
}

// 用于前端展示的用户数据
message u {
    // id
    int64 id = 1;
    // 登录名
    string username = 2; // len: 5-20
    // 名字
    string name = 3;
    // 手机
    string phone =4;
    // 邮箱
    string mail = 5;
    // 锁定状态
    bool locked = 6;
    // 创建时间
    int64 created = 7;
    // 部门id
    int64 department_id = 8;
    // 角色id
    int64 role_id = 9;
    // 部门详情
    dep department = 10;
    // 角色详情
    r role = 11;
}

message UserListReq {
    // 页数,从0开始计数
    int32 page = 1; // default = 0
    // 页大小
	int32 size = 2; // default = 20
}

message UserListResp {
	// 响应码[机读]
    int32 code = 1;
    // 返回信息，人读
    string msg = 2;
    message users {
        int64 total = 1;
        repeated u users = 2;
    }
    // 获取结果
    users data = 3;
}

message UserGetReq {
	// FIXME Get req
	int64 id = 1;
}

message UserGetResp {
	// 响应码[机读]
    int32 code = 1;
    // 返回信息，人读
    string msg = 2;
    // 获取结果
    u data = 3;
}

message UserAddReq {
    u user = 1;
}

message UserAddResp {
	// 响应码[机读]
    int32 code = 1;
    // 返回信息，人读
    string msg = 2;
    // 获取结果 id
	int64 data = 3;
}

message UserDeleteReq {
    // id
	int64 id = 1;
}

message UserDeleteResp {
	// 响应码[机读]
    int32 code = 1;
    // 返回信息，人读
    string msg = 2;
}

message UserPatchReq {
    u user = 1;
}

message UserPatchResp {
	// 响应码[机读]
    int32 code = 1;
    // 返回信息，人读
    string msg = 2;
}

message UserResetPasswordReq{
    int64 id = 1;
}

message UserResetPasswordResp{
    // 响应码[机读]
    int32 code = 1;
    // 返回信息，人读
    string msg = 2;
}


message UserInfoReq {}

message UserInfoResp{
    // 响应码[机读]
    int32 code = 1;
    // 返回信息，人读
    string msg = 2;
    // 用户信息
    u data = 3;
}

message UserPatchPasswordReq{
    // 旧密码
    string old = 1;
    // 新密码
    string new = 2; // len: 6-40
}

message UserPatchPasswordResp{
    // 响应码[机读]
    int32 code = 1;
    // 返回信息，人读
    string msg = 2;
}

message UserLogoutReq {}

message UserLogoutResp{
    // 响应码[机读]
    int32 code = 1;
    // 返回信息，人读
    string msg = 2;
}

